--- a/sealfood/package.json
+++ b/sealfood/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.0",
     "card-grid": "^0.1.2",
+    "framer-motion": "^4.1.11",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
